k8s/10-services-clusterip-nodeport-loadbalancer/deployment-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-clusterip
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-clusterip
  template:
    metadata:
      labels:
        app: hello-clusterip
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:2.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-clusterip
spec:
  type: ClusterIP
  selector:
    app: hello-clusterip
  ports:
    - port: 80
      targetPort: 8080
