k8s/10-services-clusterip-nodeport-loadbalancer/deployment-loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-loadbalancer
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-loadbalancer
  template:
    metadata:
      labels:
        app: hello-loadbalancer
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:2.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: hello-loadbalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
