k8s/10-services-clusterip-nodeport-loadbalancer/deployment-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-np
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nodeport
  template:
    metadata:
      labels:
        app: hello-nodeport
    spec:
      containers:
        - name: hello-app
          image: alexnaupay/nginx-hostname:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-np
spec:
  type: NodePort
  selector:
    app: hello-nodeport
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
